
# Macro file for use with GNU AutoTools for generating config files and
# Makefiles. This file was manually created based on information found
# via Google and the GNU documentation. Although it works for the source
# code it's included with, it may not be 100% correct so additional 
# research/tweaking may be needed.

# AUTOMAKE_OPTIONS is used to pass options to 'automake'. In this case
# we're telling it to use the GNU tool chain.
AUTOMAKE_OPTIONS = gnu

# SUBDIRS takes a space delimited list of _all_ the subdirectories that
# contain source code.
SUBDIRS = src 
#
ACLOCAL_AMFLAGS = -I m4
#
xasincludedir = $(includedir)/xas
xasinclude_HEADERS = include/xas/error_codes.h
xasinclude_HEADERS += include/xas/error_handler.h
xasinclude_HEADERS += include/xas/errors.h
xasinclude_HEADERS += include/xas/errors_ncurses.h
xasinclude_HEADERS += include/xas/errors_xas.h
xasinclude_HEADERS += include/xas/event.h
xasinclude_HEADERS += include/xas/log4c_extensions.h
xasinclude_HEADERS += include/xas/logger.h
xasinclude_HEADERS += include/xas/message_codes.h
xasinclude_HEADERS += include/xas/message.h
xasinclude_HEADERS += include/xas/object.h
xasinclude_HEADERS += include/xas/tracer.h
xasinclude_HEADERS += include/xas/types.h
xasinclude_HEADERS += include/xas/queue.h

xasgplincludedir = $(includedir)/xas/gpl
xasgplinclude_HEADERS = include/xas/gpl/ansi_setup.h
xasgplinclude_HEADERS += include/xas/gpl/crlf_util.h
xasgplinclude_HEADERS += include/xas/gpl/drs_util.h
xasgplinclude_HEADERS += include/xas/gpl/fnm_util.h
xasgplinclude_HEADERS += include/xas/gpl/get_util.h
xasgplinclude_HEADERS += include/xas/gpl/hash_util.h
xasgplinclude_HEADERS += include/xas/gpl/lfn_util.h
xasgplinclude_HEADERS += include/xas/gpl/meo_util.h
xasgplinclude_HEADERS += include/xas/gpl/net_util.h
xasgplinclude_HEADERS += include/xas/gpl/nix_util.h
xasgplinclude_HEADERS += include/xas/gpl/opt_util.h
xasgplinclude_HEADERS += include/xas/gpl/port_util.h
xasgplinclude_HEADERS += include/xas/gpl/rex_util.h
xasgplinclude_HEADERS += include/xas/gpl/skt_util.h
xasgplinclude_HEADERS += include/xas/gpl/str_util.h
xasgplinclude_HEADERS += include/xas/gpl/tcp_util.h
xasgplinclude_HEADERS += include/xas/gpl/tv_util.h
xasgplinclude_HEADERS += include/xas/gpl/vperror.h
xasgplinclude_HEADERS += include/xas/gpl/xqt_util.h

xasmiscincludedir = $(includedir)/xas/misc
xasmiscinclude_HEADERS = include/xas/misc/bitops.h
xasmiscinclude_HEADERS += include/xas/misc/crc.h
xasmiscinclude_HEADERS += include/xas/misc/dates.h
xasmiscinclude_HEADERS += include/xas/misc/hash.h
xasmiscinclude_HEADERS += include/xas/misc/misc.h

xasnetincludedir = $(includedir)/xas/net
xasnetinclude_HEADERS = include/xas/net/uds.h

xasrmsincludedir = $(includedir)/xas/rms
xasrmsinclude_HEADERS = include/xas/rms/blk.h
xasrmsinclude_HEADERS += include/xas/rms/btree.h
xasrmsinclude_HEADERS += include/xas/rms/fib.h
xasrmsinclude_HEADERS += include/xas/rms/rel.h
xasrmsinclude_HEADERS += include/xas/rms/seq.h

xaswidgetsincludedir = $(includedir)/xas/widgets
xaswidgetsinclude_HEADERS = include/xas/widgets/colors.h
xaswidgetsinclude_HEADERS += include/xas/widgets/component.h
xaswidgetsinclude_HEADERS += include/xas/widgets/coordinates.h
xaswidgetsinclude_HEADERS += include/xas/widgets/events.h
xaswidgetsinclude_HEADERS += include/xas/widgets/keys.h
xaswidgetsinclude_HEADERS += include/xas/widgets/padding.h
xaswidgetsinclude_HEADERS += include/xas/widgets/theme.h
xaswidgetsinclude_HEADERS += include/xas/widgets/widget.h
xaswidgetsinclude_HEADERS += include/xas/widgets/window.h
xaswidgetsinclude_HEADERS += include/xas/widgets/workbench.h

xascomincludedir = $(includedir)/xas/widgets/components
xascominclude_HEADERS = include/xas/widgets/components/bell.h
xascominclude_HEADERS += include/xas/widgets/components/hline.h
xascominclude_HEADERS += include/xas/widgets/components/input.h
xascominclude_HEADERS += include/xas/widgets/components/label.h
xascominclude_HEADERS += include/xas/widgets/components/more.h
xascominclude_HEADERS += include/xas/widgets/components/prompt.h
xascominclude_HEADERS += include/xas/widgets/components/textarea.h
xascominclude_HEADERS += include/xas/widgets/components/text.h
xascominclude_HEADERS += include/xas/widgets/components/vline.h
xascominclude_HEADERS += include/xas/widgets/components/yesno.h

xasmenuincludedir = $(includedir)/xas/widgets/components/menus
xasmenuinclude_HEADERS = include/xas/widgets/components/menus/bar.h
xasmenuinclude_HEADERS += include/xas/widgets/components/menus/box.h
xasmenuinclude_HEADERS += include/xas/widgets/components/menus/list.h
xasmenuinclude_HEADERS += include/xas/widgets/components/menus/menus.h

xaswinincludedir = $(includedir)/xas/widgets/windows
xaswininclude_HEADERS = include/xas/widgets/windows/alert.h
xaswininclude_HEADERS += include/xas/widgets/windows/bar_menu.h
xaswininclude_HEADERS += include/xas/widgets/windows/base_window.h
xaswininclude_HEADERS += include/xas/widgets/windows/box_menu.h
xaswininclude_HEADERS += include/xas/widgets/windows/list_menu.h
xaswininclude_HEADERS += include/xas/widgets/windows/query_window.h
xaswininclude_HEADERS += include/xas/widgets/windows/status.h

